jaml/examples/invalid/bare_key.jaml
# Bare keys are allowed in YAML (implicit null), but JAML forbids this.
bare_key:
